# WurstAutoBuildGen

./: CMakeLists.txt  README.md  Wurst Autobuild Json Gen.sln  cApp.cpp  cApp.h  cMain.cpp  cMain.h
Wurst Autobuild Json Gen/: Wurst Autobuild Json Gen.rc  Wurst Autobuild Json Gen.vcxproj  Wurst Autobuild Json Gen.vcxproj.filters  cMain.cpp  cMain.h  pch.h  resource.h
icon/: icon.xpm
